--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -8,8 +8,8 @@ body {
 }
 
 .carousel-item {
-  height: 65vh;
-  min-height: 300px;
+  height: 450px;
+  /* min-height: 300px; */
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
