--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -65,3 +65,14 @@ body {
   background-color: #fac9d6;
   border-color: #fac9d6
 }
+
+.footer-hts {
+  width: 100%;
+  height: 366px;
+  position: absolute;
+  bottom: 0;
+  background: #fafafa;
+  text-align: center;
+  color: #000000;
+
+}
