--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -28,8 +28,32 @@ body {
   font-style: normal;
   line-height: normal;
   letter-spacing: -0.17px;
+  margin-top: 0.5rem;
   text-align: center;
   color: #111111;
+}
+
+.title-text-1 {
+  margin-right: 9px;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0px;
+  color: #ef6882;
+}
+
+.title-text-2 {
+  font-family: NanumSquareEB;
+  font-size: 24px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.75px;
+  color: #332a2f;
 }
 
 .portfolio-item {
