--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -12,8 +12,7 @@ body {
 .carousel-item {
   height: 450px;
   min-height: 300px;
-  width: 100%
-  background: no-repeat center center scroll;
+  width: 100% background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -118,6 +117,78 @@ body {
   border-color: #fac9d6
 }
 
+.card-title-0 {
+  margin-top: 16px;
+  margin-left: 10px;
+  font-family: NanumSquareEB;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.27px;
+  color: #332a2f
+}
+
+.img-thum {
+  object-fit: contain;
+}
+.card-text-0 {
+  margin-top: 8px;
+  margin-left: 10px;
+  opacity: 0.8;
+  font-family: NanumSquareR;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.23px;
+  color: #000000;
+}
+
+.card-extra {
+  margin-top: 16px;
+  margin-left: 10px;
+}
+
+.text-pink {
+  opacity: 0.8;
+  color: #e4a8b0;
+}
+
+.card-text-extra {
+  margin-left: 6px;
+  opacity: 0.8;
+  font-family: NanumSquareR;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.23px;
+}
+
+.span-ready {
+  width: 80px;
+  height: 23px;
+  margin-left: 46px;
+  margin-right: 5px;
+  margin-bottom: 23px;
+  border-radius: 4px;
+  border: solid 1px #e4a8b0;
+  color: #e4a8b0;
+  font-size: 14px;
+  text-align: center;
+}
+
+.icon-like {
+  position: absolute;
+  margin-top: 13px;
+  margin-left: 320px;
+  text-align: right;
+  color: #ffffff;
+}
 .vod-title {
   width: 155px;
   height: 18px;
