--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -131,7 +131,7 @@ body {
 }
 
 .img-thum {
-  object-fit: contain;
+  object-fit: fill;
 }
 .card-text-0 {
   margin-top: 8px;
@@ -172,9 +172,8 @@ body {
 .span-ready {
   width: 80px;
   height: 23px;
-  margin-left: 46px;
-  margin-right: 5px;
-  margin-bottom: 23px;
+  margin-right: 15px;
+  margin-top: -5px;
   border-radius: 4px;
   border: solid 1px #e4a8b0;
   color: #e4a8b0;
