--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -150,6 +150,7 @@ body {
 .card-extra {
   margin-top: 16px;
   margin-left: 10px;
+  margin-bottom: 13px;
 }
 
 .text-pink {
@@ -172,7 +173,7 @@ body {
 .span-ready {
   width: 80px;
   height: 23px;
-  margin-right: 15px;
+  margin-right: 18px;
   margin-top: -5px;
   border-radius: 4px;
   border: solid 1px #e4a8b0;
