--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -56,6 +56,18 @@ body {
   color: #ef6882;
 }
 
+.title-text-1-1 {
+  margin-right: 9px;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0px;
+  color: #ef6882;
+}
+
 .title-text-2 {
   font-family: NanumSquareEB;
   font-size: 24px;
@@ -72,6 +84,11 @@ body {
   padding: 0 0 12px;
   border-radius: 12.9px;
   border: solid 1.6px #e2e3eb;
+}
+
+.ic-24 {
+  margin-bottom: 10px;
+  margin-right: 15px;
 }
 
 .LOGOBlack {
@@ -102,6 +119,8 @@ body {
 .section-service {
   width: 100%;
   height: 130px;
+  margin-top: 99px;
+  margin-bottom: 100px;
   background-image: linear-gradient(to right, #ffedf2 26%, #fac9d6 115%);
 }
 
@@ -133,6 +152,7 @@ body {
 .img-thum {
   object-fit: fill;
 }
+
 .card-text-0 {
   margin-top: 8px;
   margin-left: 10px;
@@ -189,6 +209,7 @@ body {
   text-align: right;
   color: #ffffff;
 }
+
 .vod-title {
   width: 155px;
   height: 18px;
@@ -219,8 +240,50 @@ body {
   width: 100%;
   height: 366px;
   background: #fafafa;
-  text-align: center;
+  margin-top: 128px;
+  padding-top: 49px;
   color: #000000;
+}
+
+.footer-title {
+  font-family: NanumGothic;
+  font-size: 15px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #000000;
+}
+
+.footer-contents {
+  margin: 27px 0 0;
+  font-family: NanumGothic;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #7f7f7f;
+}
+
+.footer-agree {
+ margin: 19px 206px 82px 0;
+ font-family: NanumGothic;
+ font-size: 12px;
+ font-weight: bold;
+ font-stretch: normal;
+ font-style: normal;
+ line-height: normal;
+ letter-spacing: normal;
+ color: #959595;
+}
+
+.img-mask {
+  margin-top: 300px;
+  margin-left: 1655px;
+  position: fixed;
 }
 
 .tab-contents {
