--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -163,8 +163,6 @@ body {
 }
 
 .teacher-text-extra {
-  margin-top: 8px;
-  text-align: center;
   font-family: NanumSquareR;
   font-size: 14px;
   font-weight: normal;
@@ -176,6 +174,17 @@ body {
 
 .img-thum {
   object-fit: fill;
+}
+
+.img-live {
+  object-fit: contain;
+  width: 100%;
+  height: 620px;
+}
+
+.chat {
+  width:100%;
+  height: 700px;
 }
 
 .card-text-0 {
@@ -327,10 +336,9 @@ body {
 }
 
 /* Style the buttons inside the tab */
-.tab-contests button {
+.tab-contents button {
   background-color: inherit;
   margin-bottom: 1px;
-  float: center;
   border: none;
   outline: none;
   cursor: pointer;
@@ -340,12 +348,12 @@ body {
 }
 
 /* Change background color of buttons on hover */
-.tab-contests button:hover {
+.tab-contents button:hover {
   color: #e4a8b0;
 }
 
 /* Create an active/current tablink class */
-.tab-contests button.active {
+.tab-contents button.active {
   color: #e4a8b0;
   border-bottom-style: solid;
   border-bottom-color: #e4a8b0;
