--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -389,6 +389,7 @@ body {
   letter-spacing: -0.25px;
   text-align: center;
   color: #e4a8b0;
+  background-color: #ffffff;
 }
 
 .content-title {
