--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -71,6 +71,20 @@ body {
 .title-text-2 {
   font-family: NanumSquareEB;
   font-size: 24px;
+  margin-right: 5px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.75px;
+  color: #332a2f;
+}
+
+.title-text-2-1 {
+  font-family: 'NanumSquareEB';
+  font-size: 24px;
+  font-weight: 700;
+  margin-right: 9px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
@@ -248,14 +262,14 @@ body {
   border-radius: 4px;
   border: solid 1px #e4a8b0;
   color: #e4a8b0;
-  font-size: 14px;
   text-align: center;
 }
 
 .icon-like {
   position: absolute;
   margin-top: 13px;
-  margin-left: 320px;
+  margin-left: 310px;
+  font-size:25px;
   text-align: right;
   color: #ffffff;
 }
