--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -305,6 +305,7 @@ body {
   height: 366px;
   background: #fafafa;
   margin-top: 128px;
+  margin-bottom: 0px;
   padding-top: 49px;
   color: #000000;
 }
