--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -272,10 +272,21 @@ body {
   height: 700px;
 }
 
-.round_hts {
-  width: 2px;
-  height: 2px;
-  border-radius: 1px;
+#circle1 {
+background-color:#86efef;
+width:150px;
+height:150px;
+border-radius:75px;
+text-align:center;
+margin:0 auto;
+font-size:12px;
+vertical-align:middle;
+line-height:150px;
+}
+#round_hts {
+  width: 5px;
+  height: 5px;
+  border-radius: 2.5px;
   margin: 5px 30px 0;
   background-color: #e4a8b0;
 }
