--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -76,10 +76,9 @@ body {
 }
 
 .title-text-2 {
-  font-family: NanumSquareEB;
   font-size: 24px;
   margin-right: 5px;
-  font-weight: normal;
+  font-weight: 700;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
@@ -88,7 +87,6 @@ body {
 }
 
 .title-text-2-1 {
-  font-family: 'NanumSquareEB';
   font-size: 24px;
   font-weight: 700;
   margin-right: 9px;
@@ -195,8 +193,9 @@ body {
 }
 
 .card-title-0 {
-  margin-top: 16px;
-  margin-left: 10px;
+  /* margin-top: 16px;
+  margin-left: 10px; */
+  padding: 15px 10px;
   font-family: 'NanumSquareB', sans-serif;
   font-size: 16px;
   font-weight: normal;
@@ -487,7 +486,7 @@ line-height:150px;
   margin: 6px 98px 6px 30px;
   font-family: NanumSquareEB;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
