--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -4,9 +4,6 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 /* @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css); */
-body {
-  padding-top: 56px;
-}
 
 .carousel-item {
   height: 450px;
@@ -64,7 +61,7 @@ body {
   font-style: normal;
   line-height: normal;
   letter-spacing: 0px;
-  color: #ef6882;
+  color: #e4a8b0;
 }
 
 .ic_play {
@@ -78,7 +75,7 @@ body {
 .title-text-2 {
   font-size: 24px;
   margin-right: 5px;
-  font-weight: 700;
+  font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
@@ -90,7 +87,7 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin-right: 9px;
-  font-weight: normal;
+  font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
@@ -232,7 +229,22 @@ body {
   color: #332a2f
 }
 
+.teacher-title-1 {
+  margin-top: 16px;
+  margin-bottom: -1px;
+  text-align: center;
+  font-family: NanumSquare, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.27px;
+  color: #332a2f
+}
+
 .teacher-text-extra {
+  margin-top: 2px;
   font-size: 14px;
   font-weight: 100;
   font-weight: normal;
@@ -291,7 +303,7 @@ line-height:150px;
 }
 
 .card-text-0 {
-  margin-top: 8px;
+  margin-top: -10px;
   margin-left: 10px;
   opacity: 0.8;
   font-family: NanumSquareR;
