--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -7,7 +7,8 @@
 
 .carousel-item {
   min-height: 300px;
-  width: 100% background: no-repeat center center scroll;
+  width: 100%;
+  background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
