--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -217,6 +217,31 @@
   letter-spacing: -0.56px;
   color: #ffffff;
 } */
+.btn-hts-1 {
+  width: 67px;
+  height: 24px;
+  margin-left: 14px;
+  /* margin-right: 0px; */
+  font-size: 12px;
+  /* padding: 8px 23.5px 9px 24.5px; */
+  border-radius: 2px;
+  border: solid 1px #e09aa4;
+  background-color: #e4a8b0;
+}
+
+.chat-3 {
+  margin-top: 3px;
+  margin-left: 210px;
+  font-size: 13px;
+  color: #c6c6d1
+}
+
+.btn-hts-1:hover {
+  color: #fff;
+  background-color: #fac9d6;
+  border-color: #fac9d6
+}
+
 .btn-hts {
   width: 70px;
   height: 30px;
@@ -315,9 +340,26 @@
   margin: 8px 0 0;
 }
 
+.chat-header {
+  width: 380px;
+  border-bottom: solid 1px #e0e1e7;
+}
+
 .hr-live-1 {
   width: 100%;
-  margin: 8px 0 0;
+}
+
+.chat-input {
+  width: 310px;
+  height: 50px;
+  margin: 8px 0 6px;
+  padding: 15px 45px 15px 15px;
+  font-size: 14px;
+  color: #c6c6d1;
+  opacity: 0.7;
+  border-radius: 4px;
+  border: solid 1px #e2e3eb;
+  background-color: #ffffff;
 }
 
 .img-thum {
@@ -328,12 +370,12 @@
 
 .img-live {
   object-fit: contain;
-  width: 750px;
+  width: 740px;
   height: 479px;
 }
 
 .img-live2 {
-  width:380px;
+  width: 380px;
   height: 620px;
 }
 
@@ -348,6 +390,11 @@
 .chat {
   width: 100%;
   height: 700px;
+}
+
+.chat-body {
+  height: 500px;
+  overflow: scroll;
 }
 
 .card-chat {
@@ -682,4 +729,40 @@
   margin: 0 0 1px;
   padding: 0 0 150px;
   border: solid 1px #e0e1e7;
+}
+
+.card-text-title {
+  margin-left: 10px;
+  margin-top: 4px;
+  font-family: NanumSquareB;
+  font-size: 12px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.23px;
+}
+
+.card-text-ment-1 {
+  margin-left: 10px;
+  margin-top: 4px;
+  font-family: NanumSquareB;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.23px;
+}
+
+.card-text-ment-2 {
+  margin-left: 33px;
+  margin-top: -3px;
+  font-family: NanumSquareB;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.23px;
 }
