--- a/css/happytoseeyou.css
+++ b/css/happytoseeyou.css
@@ -706,7 +706,7 @@ body: {
   border-radius: 6px;
   border: solid 1px #e09aa4;
   background-color: #e4a8b0;
-  font-family: NanumSquareOTFEB;
+  font-family: 'NanumSquareOTFEB';
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
